v0.2.1/_sources/index.rst.txt
Neurodent 🐁
============

.. include:: ../README.md
   :parser: myst_parser.sphinx_
   :start-after: # Neurodent 🐁
   :end-before: ## Installation

Installation
------------

.. button-link:: installation/index.html
   :ref-type: ref
   :color: info
   :shadow:

   Get Started with Installation!

Documentation Contents
----------------------

.. toctree::
   :titlesonly:

   installation/index
   quickstart/index
   tutorials/index
   examples/index
   api/index
   contributing/index
   license/index

Acknowledgements
------------------

.. include:: ../README.md
   :parser: myst_parser.sphinx_
   :start-after: ## Acknowledgements
   :end-before: ## Citation

Citation
------------------

.. include:: ../README.md
   :parser: myst_parser.sphinx_
   :start-after: ## Citation

Indices and tables
------------------

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
