v0.5.0/_sources/index.rst.txt
NeuRodent 🐁
============

.. include:: ../README.md
   :parser: myst_parser.sphinx_
   :start-after: # NeuRodent 🐁
   :end-before: ## Installation

Installation
------------

.. button-link:: installation/index.html
   :ref-type: ref
   :color: info
   :shadow:

   Get Started with Installation!

Documentation Contents
----------------------

.. toctree::
   :titlesonly:

   installation/index
   quickstart/index
   tutorials/index
   examples/index
   api/index
   contributing/index
   license/index

Acknowledgements
------------------

.. include:: ../README.md
   :parser: myst_parser.sphinx_
   :start-after: ## Acknowledgements
   :end-before: ## Citation

Citation
------------------

.. include:: ../README.md
   :parser: myst_parser.sphinx_
   :start-after: ## Citation
   :end-before: ## Community & Governance

Community & Governance
----------------------

See the repository governance files:

- `Contributing <https://github.com/josephdong1000/neurodent/blob/main/CONTRIBUTING.md>`_
- `Support <https://github.com/josephdong1000/neurodent/blob/main/SUPPORT.md>`_
- `Code of Conduct <https://github.com/josephdong1000/neurodent/blob/main/CODE_OF_CONDUCT.md>`_
- `Citation metadata <https://github.com/josephdong1000/neurodent/blob/main/CITATION.cff>`_

Indices and tables
------------------

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
